# preferans

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .gitignore  .gitmodules  .iwyu  Dockerfile  LICENSE  README.md  build.sh  run.sh
client/: CMakeLists.txt
client/resources/: minshell.html  shell.html
client/resources/cards/: LICENSE
client/resources/fonts/: LICENSE
client/resources/html/: LICENSE  index.html.in
client/resources/shells/: LICENSE  minshell.html  shell.html  shell_minimal.html
client/resources/sounds/: LICENSE
client/resources/styles/: LICENSE  style_dracula.rgs
client/src/: client.cpp  client.hpp
cmake/: ccache.cmake  clang-format.cmake  clang-tidy.cmake  cmake-format.cmake  flags.cmake  iwyu.cmake  sanitizers.cmake
common/: common.hpp  logger.hpp  time.hpp
include/common/: common.hpp  logger.hpp  time.hpp
proto/: pref.proto
server/: CMakeLists.txt
server/config/: yoursite.com
server/src/: auth.cpp  auth.hpp  game_data.cpp  game_data.hpp  main.cpp  pref_cli.cpp  secret.hpp  senders.cpp  senders.hpp  serialization.cpp  serialization.hpp  server.cpp  server.hpp  transport.cpp  transport.hpp
server/tests/: server_test.cpp  test_server.cpp
tests/: conftest.py  pytest.ini  run-tests.sh  test_server.py
